--- a/.gitconfig
+++ b/.gitconfig
@@ -1,21 +1,25 @@
+[user]
+    name    = khalilmasri
+    email   = khalil.1996km@gmail.com
+
 [alias]
-    a = add
-    af = add -f
-    aa = add .
-    b = branch
-    bd = branch -D
-    cm = commit -m
-    c = commit
-    co = checkout
-    cob = checkout -b
-    d = diff
-    f = fetch
-    pl = pull
-    s = status
-    ps = push
+    a       = add
+    af      = add -f
+    aa      = add .
+    b       = branch
+    bd      = branch -D
+    cm      = commit -m
+    c       = commit
+    co      = checkout
+    cob     = checkout -b
+    d       = diff
+    f       = fetch
+    pl      = pull
+    s       = status
+    ps      = push
 
 [color]
-	ui = true
+	ui      = true
 
 [core]
-	editor = vim
+	editor  = vim
