--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -2,7 +2,7 @@
   "languageserver": {
     "ccls": {
       "command": "ccls",
-      "coc.preferences.formatOnSaveFiletypes": ["ccls", "c"],
+      "coc.preferences.formatOnSaveFiletypes": ["ccls"],
       "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
       "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
       "initializationOptions": {
