--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,10 +66,6 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 set -g @plugin 'dracula/tmux'
 
-# Set 256 colors
-set -s default-terminal 'tmux-256color'
-# Add truecolor support
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-# Default terminal is 256 colors
 set -g default-terminal "screen-256color"
-
+# tell Tmux that outside terminal supports true color
+set -ga terminal-overrides ",xterm-256color*:Tc"
